hphp/test/zend/good/ext/standard/tests/misc/time_sleep_until_error1.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (!function_exists("time_sleep_until")) die('skip time_sleep_until() not available');
}
